--- a/tst.conf
+++ b/tst.conf
@@ -2,34 +2,34 @@
     ServerAdmin webmaster@localhost
     ServerName example.com
     ServerAlias www.example.com
-    DocumentRoot /home/meepocopter/tst
-    <Directory /home/meepocopter/tst>
+    DocumentRoot /home/tst/TST
+    <Directory /home/tst/TST>
         AllowOverride all
         Require all granted
         Options FollowSymlinks
         Allow from all
     </Directory>
 
-    Alias /media /home/meepocopter/tst/media
-    Alias /static /home/meepocopter/tst/static
+    Alias /media /home/tst/TST/media
+    Alias /static /home/tst/TST/static
 
-    <Directory /home/meepocopter/tst/static>
+    <Directory /home/tst/TST/static>
         Require all granted
     </Directory>
 
-    <Directory /home/meepocopter/tst/media>
+    <Directory /home/tst/TST/media>
     Require all granted
     </Directory>
 
-    <Directory /home/meepocopter/tst/tst>
+    <Directory /home/tst/TST/tst>
         <Files wsgi.py>
             Require all granted
         </Files>
     </Directory>
 
 
-    WSGIDaemonProcess tst python-path=/home/meepocopter/tst python-home=/home/meepocopter/tst/env
+    WSGIDaemonProcess tst python-path=/home/tst/TST python-home=/home/tst/TST/env
     WSGIProcessGroup tst
-    WSGIScriptAlias / /home/meepocopter/tst/tst/wsgi.py
+    WSGIScriptAlias / /home/tst/TST/tst/wsgi.py
 
 </VirtualHost>
