--- a/tst.conf
+++ b/tst.conf
@@ -1,7 +1,7 @@
 <VirtualHost *:80>
     ServerAdmin webmaster@localhost
-    ServerName example.com
-    ServerAlias www.example.com
+    ServerName tst-group.kz
+    ServerAlias www.tst-group.kz
     DocumentRoot /home/tst/TST
     <Directory /home/tst/TST>
         AllowOverride all
@@ -32,4 +32,43 @@
     WSGIProcessGroup tst
     WSGIScriptAlias / /home/tst/TST/tst/wsgi.py
 
+</VirtualHost>
+
+<VirtualHost *:443>
+    ServerAdmin webmaster@localhost
+    ServerName tst-group.kz
+    ServerAlias www.tst-group.kz
+    DocumentRoot /home/tst/TST
+    <Directory /home/tst/TST>
+        AllowOverride all
+        Require all granted
+        Options FollowSymlinks
+        Allow from all
+    </Directory>
+
+    Alias /media /home/tst/TST/media
+    Alias /static /home/tst/TST/static
+
+    <Directory /home/tst/TST/static>
+        Require all granted
+    </Directory>
+
+    <Directory /home/tst/TST/media>
+    Require all granted
+    </Directory>
+
+    <Directory /home/tst/TST/tst>
+        <Files wsgi.py>
+            Require all granted
+        </Files>
+    </Directory>
+
+    WSGIDaemonProcess tst python-path=/home/tst/TST python-home=/home/tst/TST/env
+    WSGIProcessGroup tst
+    WSGIScriptAlias / /home/tst/TST/tst/wsgi.py
+
+    SSLEngine on
+    SSLCertificateFile /home/tst/TST/ssl/cert.crt
+    #SSLCertificateChainFile /home/tst/TST/ssl/cert-ca.crt
+    SSLCertificateKeyFile /home/tst/TST/ssl/private.key
 </VirtualHost>
